# pisces

pisces-api/: .env.example  .gitignore  README.md  main.py  main_prototype.py  pyproject.toml
pisces-api/alembic/: env.py
pisces-api/alembic/versions/: c5dde5f8885e_initial_schema.py
pisces-api/app/: __init__.py  main.py
pisces-api/app/agents/: __init__.py  extract_names_agent.py  review_agent.py  summarize_agent.py  translate_agent.py
pisces-api/app/core/: __init__.py  celery_app.py  database.py  llm.py  logging.py  prompts.py
pisces-api/app/entities/: __init__.py  base.py  chapter.py  glossary_entry.py  novel.py  translation_job.py
pisces-api/app/graph/: __init__.py  pipeline.py  state.py
pisces-api/app/prompts/: extract_names.yaml  review.yaml  summarize_chapter.yaml  translate_vietnamese.yaml
pisces-api/app/repositories/: __init__.py  chapter_repository.py  glossary_repository.py  novel_repository.py  translation_job_repository.py
pisces-api/app/routers/: __init__.py  chapter_router.py  glossary_router.py  novel_router.py  translation_router.py
pisces-api/app/schemas/: __init__.py
pisces-api/app/schemas/api/: __init__.py  chapter.py  glossary.py  novel.py  translation.py
pisces-api/app/schemas/graph/: __init__.py  names.py  review.py  summarize.py  translate.py
pisces-api/app/services/: __init__.py  chapter_service.py  epub_service.py  glossary_service.py  novel_service.py  translation_service.py  txt_service.py
pisces-api/app/tasks/: translation_tasks.py
pisces-api/tests/: __init__.py
